test/syc/bad/long3.c
/*
 * Three long specifiers
 */

long long long a;
